# RayTracing

./: CMakeLists.txt  README.txt  effects.hpp  geometry.h  main  main.cpp  material.hpp  object.hpp  ray.hpp  rt  sample.cpp  test.cpp  window.hpp
BMP/: EasyBMP_BMP.h
tinyraytracer-master/: tinyraytracer.cpp
